frontend/test/should_fail/object_004.grg
using object_model_001;

rule test1 {
    a:A -x:e-> b:A;
    if {
        b.obj == x.obj;
        e.obj == x.obj*e.obj;
	}

    modify {
        eval {
            a.obj = null;
        }
    }
}
